# sparse-tight-binding-TMDCs

./: LICENSE.txt  PCA_1D_Test.py  README.md  eigengesichter.py  mos2.py  mos2exp2.py  mos2exp_0.py  mos2exp_1.py  mos2exp_3.py  mos2exp_4.py  pyproject.toml  reduktionsfehler.py  sk_custom_class.py
Old_Projects/: README.md  graphene_version1.py  graphene_version2.py  iris_pca_vs_incrementalpca.py  irispca.py  minimal_mos2.py  mos2exp_3.py  mos2expclass.py  zweiartenvon2d.py  zweidimgesichter.py
SVD_mos2/: README.md  mvsngraphsvd.py  resultssvd.py  svd_mos2.py
SVD_mos2/archive/: nbse2_2meV.stc  testfile.txt  testhamiltonian.csv
graddesc_mos2/: README.md  mos2_bandgap_graddesc.py  mos2_graddesc.py  mos2_multilevel_graddesc.py
mos2pca/: 0_note_on_folder_structure.txt  mos2class.py  mos2pcaclass.py  pca_exp0.py  pca_exp1.py  pca_graddesc.py  pca_multilevel_graddesc.py  test.py
mos2pca/Alt/: newmos2class.py  newmos2class_v2.py  pca_exp0_CustomSK.py  sk_custom_class.py  test.py  test_allhoppings.csv
mos2pca/Oldhoplistbuilder/: hoplistbuilder.py
mos2pca/SVD_mos2/: max_sparsify.py  svd_mos2.py
mos2pca/exp_0/: pca_exp0.py
mos2pca/optunaruns/: idealhops.txt  optuna_mos2.db  optuna_mos2.db-shm  optuna_mos2.db-wal  pca_graddesc_optuna.py
mos2svd/: hoplistbuilder.py  svd_mos2.py  svdmos2class.py
optunaruns/: optuna_mos2.db
plots/: README.md  bandgapillustration.py  degrees.py  hoppingorders.py  orbitals.py  sample_diag.h5  sqrtabs.py  test.py
reduced_mos2/: IMPORTANTNOTE.txt
resources/: README.md
results/: README.md  results.py  sample_diag.h5  test.py
(+1899 files in other folders)
