[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "reduced_mos2"
version = "0.1.0"
description = "reduced_mos2 project"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "Bastian Guggenberger"}]

[tool.setuptools.packages.find]
where = ["resources"]
include = ["mos2class*"]